Update Ukrainian.properties (#1582)
* Update Ukrainian.properties

Added translations

* Update Ukrainian.properties

* Update Ukrainian.properties

* Update Ukrainian.properties

* Update Ukrainian.properties

* Update Ukrainian.properties

* Update Ukrainian.properties

--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -315,13 +315,13 @@ Denounce ([numberOfTurns] turns) = Звинувачення (Ходів: [number
 We will remember this. = Ми пам’ятатимемо це.
 
  # Requires translation!
-[civName] has declared war on [targetCivName]! = 
+[civName] has declared war on [targetCivName]! = [civName] оголосила війну [targetCivName]!
  # Requires translation!
-[civName] and [targetCivName] have signed the Peace Treaty! = 
+[civName] and [targetCivName] have signed the Peace Treaty! = [civName] і [targetCivName] підписали Мирний договір!
  # Requires translation!
-[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+[civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] і [targetCivName] підписали Декларацію про дружбу! 
  # Requires translation!
-[civName] has denounced [targetCivName]! = 
+[civName] has denounced [targetCivName]! = [civName] звинуватила [targetCivName]!
 
 Unforgivable = непрощальні
 Enemy =  ворожі
@@ -836,8 +836,8 @@ Hurry Wonder = Завершити будування дива
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Ваші громадяни були задоволені вашим правлінням так довго, що імперія вступає в Золотий вік!
 You have entered the [newEra]! = Ви увійшли до епохи [newEra]!
  # Requires translation!
-[civName] has entered the [eraName]! = 
-[policyBranch] policy branch unlocked! = Галузь політики [policyBranch] розблоковано
+[civName] has entered the [eraName]! = [civName] ввійшла у [eraName]!
+[policyBranch] policy branch unlocked! = Галузь політики [policyBranch] розблокована
 Overview = Огляд
 Total = Усього
 Stats = Статистика
@@ -866,7 +866,7 @@ Defeated = Переможено
 Tiles = Клітини
 Natural Wonders = Природні дива
  # Requires translation!
-Treasury deficit = 
+Treasury deficit = Дефіцит скарбів
 
 #Victory
 
@@ -951,7 +951,7 @@ Clear improvements = Видалити вдосконалення
 Clear resource = Видалити ресурс
 Requires = Потребує
  # Requires translation!
-Menu = 
+Menu = Меню
 
 # Civilopedia Tutorials names
 
@@ -1007,7 +1007,7 @@ Citizenship = Права і обов'язки громадянина
 Tile improvement speed +25%, receive a free worker near the capital = Покращення клітинок відбувається на +25% швидше, новий працівник коло столиці
 Republic = Республіка
  # Requires translation!
-+1 construction in every city, +5% construction when constructing buildings = 
++1 construction in every city, +5% construction when constructing buildings = +1 виробництво, +5% виробництва при будівництві будівель
 Representation = Представництво
 Each city founded increases culture cost of policies 33% less than normal. Starts a golden age. = Кожне засноване місто зменшує ціну інституту на 33%. Розпочинає золотий вік.
 Meritocracy = Меритократія
@@ -1016,7 +1016,7 @@ Liberty Complete = Лібералізм завершено
 Free Great Person of choice near capital = Безкоштовна велика людина біля столиці
 
 Honor = Честь
-+25% bonus vs Barbarians; gain Culture when you kill a barbarian unit = +25% бонуса проти варварів; отримайте культури при вбивстві варварського підрозділа
++25% bonus vs Barbarians; gain Culture when you kill a barbarian unit = +25% бонуса проти варварів; отримайте культуру при вбивстві варварського підрозділа
 Warrior Code = Кодекс воїна
 +20% production when training melee units = +20% виробництва при виробництві ближньобійників
 Discipline = Дисципліна
@@ -1451,7 +1451,7 @@ Knight = Лицар
 Camel Archer = Лучник на верблюді
 Conquistador = Конкістадор
  # Requires translation!
-Defense bonus when embarked = 
+Defense bonus when embarked = Бонус до захисту при підйомі на борт
 Naresuan's Elephant = Слон Наресуана
 Samurai = Самурай
 Combat very likely to create Great Generals = Висока вірогідність отримати у битві видатного генерала
