--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -696,14 +696,14 @@ A new barbarian encampment has spawned! = Nowy obóz barbarzyńców został utwo
 # World Screen UI
 
 Working... = Pracujemy nad tym...
-Waiting for other players... = Oczekiwanie /nna innych /ngraczy
+Waiting for other players... = Oczekiwanie \nna innych \ngraczy
 in = w
-Next turn = Następna /nTura
+Next turn = Następna \nTura
 Turn = Tura
 turns = tury
 turn = tura
-Next unit = Następna /nJednostka
-Pick a policy = Wybierz /nUstrój Społeczny
+Next unit = Następna \nJednostka
+Pick a policy = Wybierz \nUstrój Społeczny
 Movement = Ruch
 Strength = Siła
 Ranged strength = Siła dystansowa
