Managed to load first mini mod, needs some work before this can work for users  (what happens if we started a game with mod A and then we want to start a game with only mod B?)

--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -51,8 +51,8 @@ for(platform in PackrConfig.Platform.values()) {
         PackrConfig config = new PackrConfig()
         config.platform = platform
 
-        // For Travis
-        if(true) { // change to false for local build
+        def forTravis = true // change to false for local build
+        if(forTravis) {
             if (platform == PackrConfig.Platform.Linux32 || platform == PackrConfig.Platform.Linux64)
                 config.jdk = System.env.'JAVA_HOME'
             // take the jdk straight from the building linux computer
