--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -80,7 +80,7 @@ Colossus = Kolosus
 +1 gold from worked water tiles in city = +1 emas dari daerah air yang dikerjakan di kota
 
 Temple = Kuil
-Burial Tomb = Makam Terkubur
+Burial Tomb = Makam Kuburan
 
 The Oracle = Oracle
  # Requires translation!
@@ -155,8 +155,8 @@ Great Wall = Tembok Besar
 Enemy land units must spend 1 extra movement point when inside your territory (obsolete upon Dynamite) = Unit darat musuh harus menggunakan ekstra 1 pergerakan saat berada di dalam daerahmu
 
 Workshop = Bengkel
-Longhouse = Bengkel Panjang
-+1 Production from each worked Forest tile = +1 Produksi dari daerah hutan yang dikelolah
+Longhouse = Rumah Panjang
++1 Production from each worked Forest tile = +1 Produksi dari daerah hutan yang dikelola
 
 Forge = Penempa Besi
 
@@ -251,7 +251,7 @@ Big Ben = Big Ben
 'To achieve great things, two things are needed: a plan, and not quite enough time.'  - Leonard Bernstein = 
 -15% to purchasing items in cities = Harga barang di kota -15% 
 
-Cristo Redentor = Penebus Dosa Jesus Kristus
+Cristo Redentor = Cristo Redentor
  # Requires translation!
 'Come to me, all who labor and are heavy burdened, and I will give you rest.'  - New Testament, Matthew 11:28 = 
 Culture cost of adopting new Policies reduced by 10% = Jumlah Budaya untuk membuat kebijakan baru berkurang sebanyak 10%
@@ -287,11 +287,11 @@ Statue of Liberty = Patung Liberty
 
 Medical Lab = Lab Medis
 Research Lab = Lab Riset
-Hydro Plant = PLTA
+Hydro Plant = PLT Air
 Stadium = Stadium
-Solar Plant = Panel Surya
-Must be next to desert = Harus di dekat gurun
-Must be next to mountain = Harus di dekat gunung
+Solar Plant = PLT Surya
+Must be next to desert = Harus di sebelah gurun
+Must be next to mountain = Harus di sebelah gunung
 
 Sydney Opera House = Gedung Opera Sydney
  # Requires translation!
@@ -310,7 +310,7 @@ Enables nuclear weapon = Menciptakan Senjata Nuklir
 Apollo Program = Program Apollo
 Enables construction of Spaceship parts = Menyediakan konstruksi Pesawat Angkasa
 
-Nuclear Plant = PLTN
+Nuclear Plant = PLT Nuklir
 
 Spaceship Factory = Pabrik Pesawat Angkasa
 Increases production of spaceship parts by 50% = Mempercepat produksi bagian pesawat angkasa sebanyak 50%
@@ -331,9 +331,9 @@ Increases production of spaceship parts by 25% = Mempercepat produksi bagian pes
 Requires [buildingName] to be built in the city = Membutuhkan [buildingName] untuk dibangun di kota
 Requires [buildingName] to be built in all cities = Membutuhkan [buildingName] untuk dibangun di semua kota
 Provides a free [buildingName] in the city = Memberikan [buildingName] gratis di kota
-Requires worked [resource] near city = Membutuhkan [resource] yang diperkerjakan di kota
+Requires worked [resource] near city = Membutuhkan [resource] yang dikerjakan di kota
 Wonder is being built elsewhere = Keajaiban Dunia sedang dibangun di tempat lain
-Requires a [buildingName] in all cities = Membutuhlan [buildingName] di semua kota
+Requires a [buildingName] in all cities = Membutuhkan [buildingName] di semua kota
 Requires a [buildingName] in this city = Membutuhkan [buildingName] di kota ini
 Requires [resource] = Membutuhkan [resource]
 Required tech: [requiredTech] = Membutuhkab teknologi: [requiredTech]
