--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -927,7 +927,7 @@ Defence bonus = Бонус до захисту
 Movement cost = Вартість руху
 Rough Terrain = Нерівна місцевість
  for  =  за 
-Missing Аs: = Відсутні переклади:
+Missing translations: = Відсутні переклади:
 Version = Версія
 Resolution = Роздільність
 Tileset = Палітра клітинок
