--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -535,46 +535,46 @@ Sejong = Sejong
 +2 Science for all specialists and Great Person tile improvements = +2 Ilmu pengetahuan untuk semua spesialis dan improvisasi lahan Orang Hebat
 
  # Requires translation!
-Iroquois = 
+Iroquois = Iroquois
  # Requires translation!
-Hiawatha = 
+Hiawatha = Hiawatha
  # Requires translation!
-All units move through Forest and Jungle Tiles in friendly territory as if they have roads. These tiles can be used to establish City Connections upon researching the Wheel. = 
+All units move through Forest and Jungle Tiles in friendly territory as if they have roads. These tiles can be used to establish City Connections upon researching the Wheel. = Semua unit yang bergerak melalui lahan Hutan dan Hutan belantara di teritori yang ramah sama seperti melewati jalan. Lahan - lahan tersebut dapat digunakan untuk mendirikan Koneksi antar Kota pada saat meneliti teknologi Roda. 
 
  # Requires translation!
-Persia = 
+Persia = Persia
  # Requires translation!
-Darius I = 
+Darius I = Darius ke I
  # Requires translation!
-Golden Ages last 50% longer. During a Golden Age, units receive +1 Movement and +10% Strength = 
+Golden Ages last 50% longer. During a Golden Age, units receive +1 Movement and +10% Strength = Masa Kejayaan berlangsung 50% lebih lama. Pada saat memasuki Masa Kejayaan, unit menerima +1 Pergerakkan dan +10% Kekuatan
 
  # Requires translation!
-Polynesia = 
+Polynesia = Polinesia
  # Requires translation!
-Kamehameha I = 
+Kamehameha I = Kamehameha ke I
  # Requires translation!
-Can embark and move over Coasts and Oceans immediately. +1 Sight when embarked. +10% Combat Strength bonus if within 2 tiles of a Moai. = 
+Can embark and move over Coasts and Oceans immediately. +1 Sight when embarked. +10% Combat Strength bonus if within 2 tiles of a Moai. = Langsung dapat bergerak sepanjang Pantai dan Samudera. +1 Penglihatan ketika bergerak di laut. +10% bonus Kekuatan Tempur jika dalam jangkauan 2 lahan dari sebuah Moai.
 
  # Requires translation!
-Siam = 
+Siam = Siam
  # Requires translation!
-Ramkhamhaeng = 
+Ramkhamhaeng = Ramkhamhaeng
  # Requires translation!
-Food and Culture from Friendly City-States are increased by 50% = 
+Food and Culture from Friendly City-States are increased by 50% = Makanan dan Budaya dari negara kota yang ramah meningkat sebanyak 50%
 
  # Requires translation!
-Songhai = 
+Songhai = Songhai
  # Requires translation!
-Askia = 
+Askia = Askia
  # Requires translation!
-Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = 
+Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Mendapatkan 3X lipat Emas dari perkemahan Barbarian dan menjarah Kota. Unit dapat melindungi diri sendiri
 
  # Requires translation!
-Spain = 
+Spain = Spanyol
  # Requires translation!
-Isabella = 
+Isabella = Isabela
  # Requires translation!
-100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 100 Emas untuk menemukan sebuah Keajaiban Alam (bonus ditingkatkan sebanyak 500 Emas jika menjadi pertama yang menemukannya). Budaya, Kebahagiaan dan penghasilan dari Keajaiban Alam meningkat 2X lipat.
 
 # New game screen
 
