--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -1415,302 +1415,228 @@ Autocracy Complete =
 
 # Technologies
 
- # Requires translation!
-Agriculture = 
+Agriculture = Pertanian
  # Requires translation!
 'Where tillage begins, other arts follow. The farmers therefore are the founders of human civilization.' - Daniel Webster = 
- # Requires translation!
-Pottery = 
+Pottery = Tembikar
  # Requires translation!
 'Shall the clay say to him that fashioneth it, what makest thou?' - Bible Isaiah 45:9 = 
- # Requires translation!
-Animal Husbandry = 
+Animal Husbandry = Peternakan
  # Requires translation!
 'Thou shalt not muzzle the ox when he treadeth out the corn.' - Bible Deuteronomy 25:4 = 
- # Requires translation!
-Archery = 
+Archery = Panahan
  # Requires translation!
 'The haft of the arrow has been feathered with one of the eagle's own plumes, we often give our enemies the means of our own destruction' - Aesop = 
- # Requires translation!
-Mining = 
+Mining = Pertambangan
  # Requires translation!
 'The meek shall inherit the Earth, but not its mineral rights.' - J. Paul Getty = 
- # Requires translation!
-Sailing = 
+Sailing = Pelayaran
  # Requires translation!
 'He who commands the sea has command of everything.' - Themistocles = 
- # Requires translation!
-Calendar = 
+Calendar = Kalender
  # Requires translation!
 'So teach us to number our days, so that we may apply our hearts unto wisdom.' - Bible Psalms 90:12 = 
- # Requires translation!
-Writing = 
+Writing = Penulisan
  # Requires translation!
 'He who destroys a good book kills reason itself.' - John Milton = 
- # Requires translation!
-Trapping = 
+Trapping = Perangkapan
  # Requires translation!
 'Even brute beasts and wandering birds do not fall into the same traps or nets twice.' - Saint Jerome = 
- # Requires translation!
-The Wheel = 
+The Wheel = Roda
  # Requires translation!
 'Wisdom and virtue are like the two wheels of a cart.' - Japanese proverb = 
- # Requires translation!
-Masonry = 
+Masonry = Pertukangan Batu
  # Requires translation!
 'How happy are those whose walls already rise!' - Virgil = 
- # Requires translation!
-Bronze Working = 
+Bronze Working = Pertukangan Perunggu
  # Requires translation!
 'Here Hector entered, with a spear eleven cubits long in his hand; the bronze point gleamed in front of him, and was fastened to the shaft of the spear by a ring of gold.' - Homer = 
- # Requires translation!
-Optics = 
+Optics = Optik
  # Requires translation!
 'He made an instrument to know if the moon shine at full or no.' - Samuel Butler = 
- # Requires translation!
-Horseback Riding = 
+Horseback Riding = Perkudaan
  # Requires translation!
 'A Horse! A Horse! My kingdom for a horse!' - Shakespeare (Richard III) = 
- # Requires translation!
-Mathematics = 
+Mathematics = Matematika
  # Requires translation!
 'Mathematics is the gate and key to the sciences.' - Roger Bacon = 
- # Requires translation!
-Construction = 
+Construction = Konstruksi
  # Requires translation!
 'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfully executed.' - Johann Wolfgang von Goethe = 
- # Requires translation!
-Philosophy = 
+Philosophy = Filosofi
  # Requires translation!
 'There is only one good, knowledge, and one evil, ignorance.' - Socrates = 
- # Requires translation!
-Currency = 
+Currency = Mata Uang
  # Requires translation!
 'Better is bread with a happy heart than wealth with vexation.' - Amenemope = 
- # Requires translation!
-Engineering = 
+Engineering = Keinsinyuran
  # Requires translation!
 'Instrumental or mechanical science is the noblest and, above all others, the most useful.' - Leonardo da Vinci = 
- # Requires translation!
-Iron Working = 
+Iron Working = Pertukangan Besi
  # Requires translation!
 'Do not wait to strike til the iron is hot, but make it hot by striking.' - William Butler Yeats = 
- # Requires translation!
-Theology = 
+Theology = Keagamaan
  # Requires translation!
 'Three things are necessary for the salvation of man: to know what he ought to believe; to know what he ought to desire; and to know what he ought to do' - St. Thomas Aquinas = 
- # Requires translation!
-Civil Service = 
+Civil Service = Pelayanan Publik
  # Requires translation!
 'The only thing that saves us from the bureaucracy is it inefficiency' - Eugene McCarthy = 
  # Requires translation!
 Enables Open Borders agreements = 
- # Requires translation!
-Guilds = 
+Guilds = Serikat Dagang
  # Requires translation!
 'The merchants and the traders have come; their profits are pre-ordained...' - Sri Guru Granth Sahib = 
- # Requires translation!
-Physics = 
+Physics = Fisika
  # Requires translation!
 'Measure what is measurable, and make measurable what is not so.' - Galileo Galilei = 
- # Requires translation!
-Metal Casting = 
+Metal Casting = Pengecoran Logam
  # Requires translation!
 'When pieces of bronze or gold or iron break, the metal-smith welds them together again in the fire, and the bond is established.' - Sri Guru Granth Sahib = 
- # Requires translation!
-Steel = 
+Steel = Baja
  # Requires translation!
 'John Henry said to his Captain, / 'A man ain't nothin' but a man, / And before I'll let your steam drill beat me down, / I'll die with the hammer in my hand.'' - Anonymous: The Ballad of John Henry, the Steel-Drivin' Man = 
- # Requires translation!
-Compass = 
+Compass = Kompas
  # Requires translation!
 'I find the great thing in this world is not so much where we stand, as in what direction we are moving.' - Oliver Wendell Holmes = 
- # Requires translation!
-Education = 
+Education = Pendidikan
  # Requires translation!
 'Education is the best provision for old age.' - Aristotle = 
- # Requires translation!
-Chivalry = 
+Chivalry = Kesatriaan
  # Requires translation!
 'Whoso pulleth out this sword of this stone and anvil, is rightwise king born of all England.' - Malory = 
- # Requires translation!
-Machinery = 
+Machinery = Mesin
  # Requires translation!
 'The press is the best instrument for enlightening the mind of man, and improving him as a rational, moral and social being.' - Thomas Jefferson = 
- # Requires translation!
-Astronomy = 
+Astronomy = Astronomi
  # Requires translation!
 'Joyfully to the breeze royal Odysseus spread his sail, and with his rudder skillfully he steered.' - Homer = 
- # Requires translation!
-Acoustics = 
+Acoustics = Akustik
  # Requires translation!
 'Their rising all at once was as the sound of thunder heard remote' - Milton = 
- # Requires translation!
-Banking = 
+Banking = Perbankan
  # Requires translation!
 'Happiness: a good bank account, a good cook and a good digestion' - Jean Jacques Rousseau = 
- # Requires translation!
-Printing Press = 
+Printing Press = Mesin Cetak
  # Requires translation!
 'It is a newspaper's duty to print the news and raise hell.' - The Chicago Times = 
- # Requires translation!
-Gunpowder = 
+Gunpowder = Bubuk Mesiu
  # Requires translation!
 'The day when two army corps can annihilate each other in one second, all civilized nations, it is to be hoped, will recoil from war and discharge their troops.' - Alfred Nobel = 
- # Requires translation!
-Navigation = 
+Navigation = Navigasi
  # Requires translation!
 'The winds and the waves are always on the side of the ablest navigators.' - Edward Gibbon = 
- # Requires translation!
-Architecture = 
+Architecture = Arsitektur
  # Requires translation!
 'Architecture begins where engineering ends.' - Walter Gropius = 
- # Requires translation!
-Economics = 
+Economics = Ekonomi
  # Requires translation!
 'Compound interest is the most powerful force in the universe.' - Albert Einstein = 
- # Requires translation!
-Metallurgy = 
+Metallurgy = Metalurgi
  # Requires translation!
 'There never was a good knife made of bad steel.' - Benjamin Franklin = 
- # Requires translation!
-Chemistry = 
+Chemistry = Kimia
  # Requires translation!
 'Wherever we look, the work of the chemist has raised the level of our civilization and has increased the productive capacity of the nation.' - Calvin Coolidge = 
- # Requires translation!
-Scientific Theory = 
+Scientific Theory = Teori Ilmiah
  # Requires translation!
 'Every great advance in science has issued from a new audacity of imagination.' - John Dewey = 
- # Requires translation!
-Archaeology = 
+Archaeology = Arkeologi
  # Requires translation!
 'Those who cannot remember the past are condemned to repeat it.' - George Santayana = 
- # Requires translation!
-Industrialization = 
+Industrialization = Industrialisasi
  # Requires translation!
 'Industrialization based on machinery, already referred to as a characteristic of our age, is but one aspect of the revolution that is being wrought by technology.' - Emily Greene Balch = 
- # Requires translation!
-Rifling = 
+Rifling = Senapan
  # Requires translation!
 'It is well that war is so terrible, or we should grow too fond of it.' - Robert E. Lee = 
- # Requires translation!
-Military Science = 
+Military Science = Ilmu Militer
  # Requires translation!
 'Wars may be fought with weapons, but they are won by men. It is the spirit of the men who follow and of the man who leads that gains the victory.' - George S. Patton = 
- # Requires translation!
-Fertilizer = 
+Fertilizer = Pupuk
  # Requires translation!
 'The nation that destroys its soil destroys itself.' - Franklin Delano Roosevelt = 
- # Requires translation!
-Biology = 
+Biology = Biologi
  # Requires translation!
 'If the brain were so simple we could understand it, we would be so simple we couldn't.' - Lyall Watson = 
- # Requires translation!
-Electricity = 
+Electricity = Listrik
  # Requires translation!
 'Is it a fact - or have I dreamt it - that, by means of electricity, the world of matter has become a great nerve, vibrating thousands of miles in a breathless point of time?' - Nathaniel Hawthorne = 
- # Requires translation!
-Steam Power = 
+Steam Power = Tenaga Uap
  # Requires translation!
 'The nations of the West hope that by means of steam communication all the world will become as one family.' - Townsend Harris = 
- # Requires translation!
-Dynamite = 
+Dynamite = Dinamit
  # Requires translation!
 'As soon as men decide that all means are permitted to fight an evil, then their good becomes indistinguishable from the evil that they set out to destroy.' - Christopher Dawson = 
- # Requires translation!
-Refrigeration = 
+Refrigeration = Pendinginan
  # Requires translation!
 'And homeless near a thousand homes I stood, and near a thousand tables pined and wanted food.' - William Wordsworth = 
- # Requires translation!
-Replaceable Parts = 
+Replaceable Parts = Suku Cadang
  # Requires translation!
 'Nothing is particularly hard if you divide it into small jobs.' - Henry Ford = 
- # Requires translation!
-Radio = 
+Radio = Radio
  # Requires translation!
 'The whole country was tied together by radio. We all experienced the same heroes and comedians and singers. They were giants.' - Woody Allen = 
- # Requires translation!
-Combustion = 
+Combustion = Pembakaran
  # Requires translation!
 'Any man who can drive safely while kissing a pretty girl is simply not giving the kiss the attention it deserves.' - Albert Einstein = 
- # Requires translation!
-Plastics = 
+Plastics = Plastik
  # Requires translation!
 'Ben, I want to say one word to you, just one word: plastics.' - Buck Henry and Calder Willingham, The Graduate = 
- # Requires translation!
-Electronics = 
+Electronics = Elektronik
  # Requires translation!
 'There's a basic principle about consumer electronics: it gets more powerful all the time and it gets cheaper all the time.' - Trip Hawkins = 
- # Requires translation!
-Ballistics = 
+Ballistics = Balistik
  # Requires translation!
 'Men, like bullets, go farthest when they are smoothest.' - Jean Paul = 
- # Requires translation!
-Mass Media = 
- # Requires translation!
-Flight = 
+Mass Media = Media Massa
+Flight = Penerbangan
  # Requires translation!
 'Aeronautics was neither an industry nor a science. It was a miracle.' - Igor Sikorsky = 
  # Requires translation!
 'The introduction of so powerful an agent as steam to a carriage on wheels will make a great change in the situation of man.' - Thomas Jefferson = 
- # Requires translation!
-Pharmaceuticals = 
+Pharmaceuticals = Farmasi
  # Requires translation!
 'In nothing do men more nearly approach the gods than in giving health to men.' - Cicero = 
- # Requires translation!
-Radar = 
+Radar = Radar
  # Requires translation!
 'Vision is the art of seeing things invisible.' - Jonathan Swift = 
- # Requires translation!
-Atomic Theory = 
+Atomic Theory = Teori Atom
  # Requires translation!
 'The unleashed power of the atom has changed everything save our modes of thinking, and we thus drift toward unparalleled catastrophes.' - Albert Einstein = 
- # Requires translation!
-Computers = 
+Computers = Komputer
  # Requires translation!
 'Computers are like Old Testament gods: lots of rules and no mercy.' - Joseph Campbell = 
- # Requires translation!
-Mobile Tactics = 
+Mobile Tactics = Taktik Perang
  # Requires translation!
 'All men can see these tactics whereby I conquer, but what none can see is the strategy out of which victory is evolved.' - Sun Tzu = 
- # Requires translation!
-Combined Arms = 
+Combined Arms = Pasukan Gabungan
  # Requires translation!
 'The root of the evil is not the construction of new, more dreadful weapons. It is the spirit of conquest.' - Ludwig von Mises = 
- # Requires translation!
-Nuclear Fission = 
+Nuclear Fission = Fusi Nuklir
  # Requires translation!
 'I am become Death, the destroyer of worlds.' - J. Robert Oppenheimer = 
- # Requires translation!
-Ecology = 
+Ecology = Ekologi
  # Requires translation!
 'Only within the moment of time represented by the present century has one species, man, acquired significant power to alter the nature of his world.' - Rachel Carson = 
- # Requires translation!
-Rocketry = 
+Rocketry = Peroketan
  # Requires translation!
 'A good rule for rocket experimenters to follow is this: always assume that it will explode.' - Astronautics Magazine, 1937 = 
- # Requires translation!
-Robotics = 
+Robotics = Robotika
  # Requires translation!
 '1. A robot may not injure a human being or, through inaction, allow a human being to come to harm. 2. A robot must obey any orders given to it by human beings, except when such orders would conflict with the First Law. 3. A robot must protect its own existence as long as such protection does not conflict with the First or Second Law.' - Isaac Asimov = 
- # Requires translation!
-Lasers = 
+Lasers = Laser
  # Requires translation!
 'The night is far spent, the day is at hand: let us therefore cast off the works of darkness, and let us put on the armor of light.' - The Holy Bible: Romans, 13:12 = 
- # Requires translation!
-Nanotechnology = 
+Nanotechnology = Teknologi Nano
  # Requires translation!
 'The impact of nanotechnology is expected to exceed the impact that the electronics revolution has had on our lives.' - Richard Schwartz = 
- # Requires translation!
-Satellites = 
+Satellites = Satelit
  # Requires translation!
 'Now, somehow, in some new way, the sky seemed almost alien.' - Lyndon B. Johnson = 
- # Requires translation!
-Particle Physics = 
+Particle Physics = Fisika Partikel
  # Requires translation!
 'Every particle of matter is attracted by or gravitates to every other particle of matter with a force inversely proportional to the squares of their distances.' - Isaac Newton = 
- # Requires translation!
-Future Tech = 
+Future Tech = Teknologi Masa Depan
  # Requires translation!
 'I think we agree, the past is over.' - George W. Bush = 
 
