--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@ buildscript {
     ext.kotlinVersion = '1.3.50'
 
     repositories {
-        // Chinese mirrors for quicker loading for chinese devs
-        maven{ url 'https://maven.aliyun.com/repository/jcenter'}
-        maven{ url 'https://maven.aliyun.com/repository/google'}
-        maven{ url 'https://maven.aliyun.com/repository/gradle-plugin'}
-        maven{ url 'https://maven.aliyun.com/repository/public'}
+        // Chinese mirrors for quicker loading for chinese devs - uncomment if you're chinese
+//        maven{ url 'https://maven.aliyun.com/repository/jcenter'}
+//        maven{ url 'https://maven.aliyun.com/repository/google'}
+//        maven{ url 'https://maven.aliyun.com/repository/gradle-plugin'}
+//        maven{ url 'https://maven.aliyun.com/repository/public'}
         google()
         mavenLocal()
         mavenCentral()
