--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -281,7 +281,6 @@ Sydney Opera House = Gedung Opera Sydney
 +1 happiness in each city = +1 kebahagiaan di setiap kota
 
 Pentagon = Pentagon
- # Requires translation!
 'In preparing for battle I have always found that plans are useless, but planning is indispensable.'  - Dwight D. Eisenhower = 'Dalam mempersiapkan perang Aku selalu menemukan bahwa rencana itu tak berguna, tetapi perencanaan itu sangat diperlukan.'  - Dwight D. Eisenhower
 Gold cost of upgrading military units reduced by 33% = Jumlah emas untuk memperbarui unit militer dikurangi sebanyak 33%
 
@@ -596,7 +595,6 @@ Multiplayer = Bermain Bersama
 Could not download game! = 
  # Requires translation!
 Could not upload game! = 
- # Requires translation!
 Join Game = Masuk Permainan
 Invalid game ID! = Game ID tidak Valid!
 Copy User ID = Salin ID Pengguna
@@ -1064,17 +1062,11 @@ Destroy =
 Destroying the city instantly razes the city to the ground. = 
  # Requires translation!
 Remove your troops in our border immediately! = 
- # Requires translation!
 Sorry. = Maaf.
- # Requires translation!
 Never! = Tak Akan Pernah!
- # Requires translation!
 Basics = Dasar - dasar
- # Requires translation!
 Resources = Sumber daya
- # Requires translation!
 Terrains = Medan
- # Requires translation!
 Tile Improvements = Improvisasi daerah
  # Requires translation!
 Unique to [civName], replaces [unitName] = 
@@ -1169,8 +1161,7 @@ Workers = Pekerja
 # Other civilopedia things
  # Requires translation!
 Nations = 
- # Requires translation!
-Promotions = 
+Promotions = Promosi
  # Requires translation!
 Available for [unitTypes] = 
 
@@ -1787,11 +1778,8 @@ Barbarian encampment = Pekemahan Barbarian
 # Unit types 
 
 Civilian = Penduduk
- # Requires translation!
 land units = Unit darat
- # Requires translation!
 water units = Unit laut
- # Requires translation!
 air units = Unit udara
  # Requires translation!
 WaterCivilian = 
@@ -1799,44 +1787,28 @@ WaterCivilian =
 Melee = 
  # Requires translation!
 WaterMelee = 
- # Requires translation!
 Ranged = Jarak jauh
  # Requires translation!
 WaterRanged = 
  # Requires translation!
 WaterSubmarine = 
- # Requires translation!
 Siege = Senjata Kepung
- # Requires translation!
 Mounted = Pasukan berkuda
- # Requires translation!
 Scout = Pramuka
- # Requires translation!
 Armor = Armor
- # Requires translation!
 City = Kota
 
 # Units
 
- # Requires translation!
 Founds a new city = Dirikan kota baru
- # Requires translation!
 Worker = Pekerja
- # Requires translation!
 Can build improvements on tiles = Dapat membangun peningkatan pada daerah
- # Requires translation!
 Ignores terrain cost = Mengabaikan medan
- # Requires translation!
 Brute = Penyerang Kasar
- # Requires translation!
 Warrior = Pejuang
- # Requires translation!
 Maori Warrior = Pejuang Maori
- # Requires translation!
 Archer = Pemanah
- # Requires translation!
 Bowman = Pemanah
- # Requires translation!
 Work Boats = Kapal Pekerja
  # Requires translation!
 Cannot enter ocean tiles until Astronomy = 
@@ -2014,11 +1986,8 @@ Triplane =
 Requires Manhattan Project = 
  # Requires translation!
 6 tiles in every direction always visible = 
- # Requires translation!
 Great War Bomber = Pengebom Perang Hebat
- # Requires translation!
 Rocket Artillery = Artileri Roket
- # Requires translation!
 Anti-Tank Gun = Senjata Anti-Tank
  # Requires translation!
 Marine = 
@@ -2026,57 +1995,31 @@ Marine =
 Mobile SAM = 
  # Requires translation!
 Paratrooper = 
- # Requires translation!
 Tank = Tank
- # Requires translation!
 Panzer = Panzer
- # Requires translation!
 Bomber = Pengebom
- # Requires translation!
 Mechanized Infantry = Pasukan Mekanis
- # Requires translation!
 Modern Armor = Armor Modern
- # Requires translation!
 B17 = B17
- # Requires translation!
 Fighter = Penyerang
- # Requires translation!
 Zero = Nol
- # Requires translation!
 Helicopter Gunship = Helikopter Tempur
- # Requires translation!
 Atomic Bomb = Bom Atom
- # Requires translation!
 Nuclear Missile = Misil Nuklir
- # Requires translation!
 Great Artist = Artis Hebat
- # Requires translation!
 Unbuildable = Tidak bisa dibangun
- # Requires translation!
 Can start an 8-turn golden age = Dapat memulai 8-giliran masa keemasan
- # Requires translation!
 Can build improvement: Landmark = Dapat membangun improvisasi lahan: Tengara
- # Requires translation!
 Great Scientist = Ilmuan Hebat
- # Requires translation!
 Can hurry technology research = Dapat mempercepat riset teknologi
- # Requires translation!
 Can build improvement: Academy = Dapat membangun improvisasi daerah: Akademi
- # Requires translation!
 Great Merchant = Pedagang Hebat
- # Requires translation!
 Can undertake a trade mission with City-State, giving a large sum of gold and [influenceAmount] Influence = Dapat melakukan sebuah misi pertukaran dengan Negara kota, memberikan emas dalam jumlah yang banyak dan [influenceAmount] Pengaruh  
- # Requires translation!
 Can build improvement: Customs house = Dapat membangun improvisasi daerah: Rumah adat
- # Requires translation!
 Great Engineer = Insinyur Hebat
- # Requires translation!
 Can speed up construction of a wonder = Dapat mempercepat kontruksi sebuah keajaiban alam
- # Requires translation!
 Can build improvement: Manufactory = Dapat membangun improvisasi daerah: Pabrik Manufaktori
- # Requires translation!
 Great General = Jenderal Hebat
- # Requires translation!
 Bonus for units in 2 tile radius 15% = Bonus untuk unit di jangkauan 2 daerah 15%
 
 # Promotions
