--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -14,7 +14,7 @@ Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassla
 Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Crea una rotta commerciale!\nCostruisci una strada tra la tua capitale e un'altra città.\nProva ad automatizzare un Lavoratore perché lo faccia.
 Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Conquista una città!\nPorta a zero la salute di una Città appartenente al nemico > \nEntra nella Città con un'unità da mischia.
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Sposta un'unità aerea!\nSeleziona un'unità aerea > Seleziona un'altra Città nel suo raggio > \nSposta l'unità in quell'altra Città.
-See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Visualizza le tue statistiche!\nEntra nella tua schermata Panoramica (in alto a sinistra)\nClicca su 'Statistiche'
+See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Visualizza le tue statistiche!\nEntra nella tua schermata Panoramica (in alto a sinistra) > \nClicca su 'Statistiche'
 
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = Santi numi! Pare che qualcosa sia andato disastrosamente storto! Quello che è successo non era assolutamente previsto! Mandami un'email all'indirizzo yairm210@hotmail.com con l'info della partita (menu -> salva partita -> copia info partita -> incolla su email) e proverò a riparare il guasto il più in fretta possibile!
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = Oh no! Sembra che sia accaduto qualcosa di storto! Quello che è successo non doveva succedere! Dammi un rapporto e noi proveremo a sistemarlo il più in fretta possibile!
@@ -491,6 +491,14 @@ Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked un
 Spain = Spagna
 Isabella = Isabella
 100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = Otteni Oro bonus (raddoppiato se la scopri per prima) quando scopri una Meraviglia Naturale, che donano il doppio di Cultura, Felicità e rese di casella.
+
+Mongolia = Mongolia
+Genghis Khan = Genghis Khan
+Combat Strenght +30% when fighting City-State units or attacking a City-State itself. All mounted units have +1 Movement. = +30% Forza quando attacchi le Città-Stato e le loro unità. +1 movimento per ogni unità a cavallo.
+
+Incas = Inca
+Pachacuti = Pachacuti
+Units ignore terrain costs when moving into any tile with Hills. No maintenance costs for improvements in Hills; half cost elsewhere. = Le unità ignorano il costo di terreno sulle Colline, dove i miglioramenti non costano nulla (i loro costi sono invece dimezzati altrove).
 
 # New game screen
 
