--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -832,7 +832,7 @@ Hurry Wonder = Ускорить постройку чуда
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Граждане настолько счастливы при вашей власти, что ваша империя вступает в золотой век!
 You have entered the [newEra]! = Вы вошли в эпоху [newEra]!
  # Requires translation!
-[civName] has entered the [eraName]! = 
+[civName] has entered the [eraName]! = [civName] вошла в эпоху [eraName]!
 [policyBranch] policy branch unlocked! = Ветвь общественных институтов [policyBranch] разблокирована!
 Overview = Обзор
 Total = Всего
@@ -862,7 +862,7 @@ Defeated = Побеждён
 Tiles = Клетки
 Natural Wonders = Чудеса природы
  # Requires translation!
-Treasury deficit = 
+Treasury deficit = Дефицит сокровищ
 
 #Victory
 
