--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -2,7 +2,7 @@
 # Tutorial tasks
 
  # Requires translation!
-Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = 
+Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = Bir birimi hareket ettir!\nBir birime tıkla > bir bölgeye tıkla > Beliren oka tıkla
  # Requires translation!
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = 
  # Requires translation!
